[tool.poetry]
# Docs: https://python-poetry.org/docs/pyproject/
package-mode = false
description = "Kevin Deldycke's personal blog"
license = 'CC-BY-NC-SA-4.0'
authors = ["Kevin Deldycke <kevin@deldycke.com>"]
readme = "readme.md"
homepage = 'https://kevin.deldycke.com'
repository = 'https://github.com/kdeldycke/kevin-deldycke-blog'

[tool.poetry.urls]
"Funding" = "https://github.com/sponsors/kdeldycke"

[tool.poetry.dependencies]
# List of python versions and their support status:
# https://en.wikipedia.org/wiki/History_of_Python#Support
python = "^3.12"
pelican = { extras = ["Markdown"], version = "^4.8.0" }
typogrify = "^2.0.7"
beautifulsoup4 = "^4.9.3"
# mdx_titlecase = "^1.2.0"  # XXX Broken!
# XXX Use forked version of mdx-video plugin as the project is clearly unmaintained:
# https://github.com/italomaia/mdx-video/issues/14
# mdx-video is good enough for now. An alternative worth exploring in the furture is pymdown-extensions,
# which has an experimental generic directive feature (https://github.com/facelessuser/pymdown-extensions/pull/1777)
# in the work that could be used to implement video embeds (https://github.com/facelessuser/pymdown-extensions/issues/896#issuecomment-1207153095).
mdx_video = { git = "https://github.com/dtantsur/mdx-video.git", rev = "a358317fafbeb78622afe1c05e08986809005b3d" }
# plumage = "^4.0.0"
plumage = { git = "https://github.com/kdeldycke/plumage.git", branch = "main" }
# plumage = { path = "../plumage/", develop = false } # XXX Dev!
pelican-image-process = "^3.0.3"
pelican-seo = "^1.2.2"
pelican-search = "^1.1.0"
# pelican-similar-posts = "^1.0.0"  # XXX Broken!
pelican-sitemap = "^1.0.2"
pelican-neighbors = "^1.2.0"
#gensim = "^4.3.0"  # XXX Broken!

[tool.poetry.group.dev.dependencies]
mypy = "^1.2"

[tool.mypy]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
pretty = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = []

[tool.typos]
default.extend-ignore-identifiers-re = [
    # error: `ba` should be `by`, `be`
    #   --> ./content/2011/postgresql-commands.md:47:95
    #    |
    # 47 |   $ psql --tuples-only --no-align -d database_id -c "SELECT id FROM res_users;" | sed ':a;N;$!ba;s/\n/ /g'
    #    |                                                                                               ^^
    #    |
    "ba",
    # error: `BA` should be `BY`, `BE`
    #   --> ./content/2020/nas-hardware.md:320:146
    #     |
    # 320 | | Heatsink + Fan | [Noctua NH-L9i](https://amzn.com/B07Y892M38/?tag=kevideld-20) | [65 W](https://noctua.at/en/nh_l9i_tdp_guidelines) |    23.6 dBA | 57.5 m³/h |              | €49.90 | Current cooler for reference. Shipped with paste. |
    #     |                                                                                                                                                  ^^
    #     |
    "BA",
    # error: `classe` should be `class`, `classes`
    #   --> ./content/2010/convert-lotus-notes-nsf-files-mbox-nlconverter.md:120:77
    #     |
    # 120 |    pywintypes.com_error: (-2147221231, 'ClassFactory ne peut pas fournir la classe demand\xe9e', None, None)
    #     |                                                                             ^^^^^^
    #     |
    "classe",
]
# Exclude French articles.
files.extend-exclude = [
    "content/2004/mise-en-place-paserelle-adsl-mandrake-10.md",
    "content/2005/creer-un-espace-de-stockage-fiable-avec-raid-5-et-lvm-sous-linux.md",
    "content/2005/script-de-reconnection-automatique-ppp.md",
    "content/2006/ajouter-une-entree-jack-universelle-sur-un-telephone-sagem-my700xi.md",
    "content/2009/cool-cavemen-creative-commons-moi.md",
    "content/2010/comment-supprimer-des-comptes-mails-secondaires-free-fr.md",
    "content/2012/ovh-configuration-modem-thomson-tg585-ipoe.md",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
