[project]
# Docs: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
name = "blog"
version = "1.0.0"
requires-python = ">= 3.12"
description = "Kevin Deldycke's personal blog"
license = { text = 'CC-BY-NC-SA-4.0' }
readme = "readme.md"
keywords = ['blog', 'personal']
classifiers = [
    # See: https://pypi.org/pypi?%3Aaction=list_classifiers
    'Development Status :: 5 - Production/Stable',
    'Environment :: Web Environment',
    'Framework :: Pelican',
    'License :: Other/Proprietary License',
    'Natural Language :: English',
    'Natural Language :: French',
    'Operating System :: OS Independent',
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Other',
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content :: News/Diary',
    'Topic :: Text Processing :: Markup :: HTML',
    'Topic :: Text Processing :: Markup :: Markdown',
    'Typing :: Typed',
]
dependencies = [
    "pelican [Markdown] ~= 4.9.1",
    "typogrify ~= 2.0.7",
    # "mdx_titlecase ~= 1.2.0",  # XXX Broken!
    # XXX Use forked version of mdx-video plugin as the project is clearly unmaintained:
    # https://github.com/italomaia/mdx-video/issues/14
    # mdx-video is good enough for now. An alternative worth exploring in the furture is pymdown-extensions,
    # which has an experimental generic directive feature (https://github.com/facelessuser/pymdown-extensions/pull/1777)
    # in the work that could be used to implement video embeds (https://github.com/facelessuser/pymdown-extensions/issues/896#issuecomment-1207153095).
    "mdx_video @ git+https://github.com/dtantsur/mdx-video.git#9e4b7d66c372c618e68767c7e8c71091c72651e5",
    # "plumage ~= 4.0.0",
    "plumage @ git+https://github.com/kdeldycke/plumage.git@main",
    # "plumage",  # XXX Uncomment for local dev.
    "pelican-deadlinks @ git+https://github.com/pelican-plugins/deadlinks.git#09c8cf976f12196e35186d284c09f35d1b1a25c0",
    "pelican-seo ~= 1.2.2",
    "pelican-search ~= 1.1.0",
    # "pelican-similar-posts ~= 1.0.0",  # XXX Broken!
    "pelican-sitemap ~= 1.1.0",
    "pelican-neighbors ~= 1.2.0",
    # "gensim ~= 4.3.0",  # XXX Broken!
]

# XXX Uncomment for local dev.
# [tool.uv.sources]
# plumage = { path = "../plumage", editable = true }

[project.optional-dependencies]
test = [
    "pytest ~= 8.3.2",
    # More pytest plugins at: https://docs.pytest.org/en/latest/reference/plugin_list.html
    "pytest-github-actions-annotate-failures ~= 0.2.0",
    "pytest-randomly ~= 3.15.0",
    "requests ~= 2.32.3",
]
typing = ["types-requests ~= 2.32.0.20240622"]

[project.urls]
"Homepage" = 'https://kevin.deldycke.com'
"Repository" = 'https://github.com/kdeldycke/kevin-deldycke-blog'
"Funding" = "https://github.com/sponsors/kdeldycke"

[tool.mypy]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
pretty = true

[tool.pytest.ini_options]
# https://docs.pytest.org/en/latest/customize.html#pyproject-toml
addopts = ["--durations=10"]
# Make sure tests that are expected to fail do not resurect and start working all of a sudden.
xfail_strict = true

[tool.typos]
default.extend-ignore-re = [
    # error: `ba` should be `by`, `be`
    #   --> ./content/2011/postgresql-commands.md:47:95
    #    |
    # 47 |   $ psql --tuples-only --no-align -d database_id -c "SELECT id FROM res_users;" | sed ':a;N;$!ba;s/\n/ /g'
    #    |                                                                                               ^^
    #    |
    # Issue reported at: https://github.com/crate-ci/typos/issues/642#issuecomment-2058343059
    "!ba;",
    # error: `classe` should be `class`, `classes`
    #   --> ./content/2010/convert-lotus-notes-nsf-files-mbox-nlconverter.md:120:77
    #     |
    # 120 |    pywintypes.com_error: (-2147221231, 'ClassFactory ne peut pas fournir la classe demand\xe9e', None, None)
    #     |                                                                             ^^^^^^
    #     |
    " ne peut pas fournir la classe ",
    # error: `hda` should be `had`
    #   --> content/2005/qemu-commands.md:19:29
    #    |
    # 19 |   $ qemu -cdrom /dev/cdrom -hda /home/kevin/qemu-disk-image.qcow -boot d
    #    |                             ^^^
    #    |
    # Issue reported at: https://github.com/crate-ci/typos/issues/998
    " -hda ",
    # error: `espace` should be `escape`
    #   --> ./content/2005/easy-mirroring-without-raid-the-poor-mans-disk-array.md:10:116
    #    |
    # 10 | I had the [project to setup a RAID 5 array using 3\*120 Gb hard drives in USB enclosures]({filename}/2005/creer-un-espace-de-stockage-fiable-avec-raid-5-et-lvm-sous-linux.md). Unfortunately my project stalled due to instability in early 2.6.x kernels (I heard that 2.6.12 and upper are now useable for "RAID over USB").
    #    |                                                                                                                    ^^^^^^
    #    |
    "creer-un-espace-de-stockage-fiable-avec-raid-5-et-lvm-sous-linux.md",
    # error: `cylindres` should be `cylinders`
    #   --> ./content/2005/how-to-mount-a-file-system-binary-image.md:28:31
    #    |
    # 28 | 9 têtes, 56 secteurs/piste, 0 cylindres, total 0 sectors
    #    |                               ^^^^^^^^^
    #    |
    " cylindres, ",
    # error: `THM` should be `THEM`
    #   --> ./content/2011/nichrome-preview-behind-the-scene-video.md:57:3
    #    |
    # 57 | `.THM` preview files generated by the camera for each `.MOV` clip.
    #    |   ^^^
    #    |
    ".THM",
    # error: `ND` should be `AND`
    #   --> ./content/2010/making-info-tgv-android-app-video.md:28:414
    #    |
    # 28 | So I set my 7D to record in 1080p at 25 fps, open the lens at f/1.4 and set the shutter speed to a [traditional 1/50s](https://en.wikipedia.org/wiki/Shutter_angle). I then set the ISO to 160 (which is the lowest [native ISO value available on the 7D](https://brendanhbanks.tumblr.com/post/392272676/the-5d-and-7ds-native-iso-levels-are-160-320)). Still, the final image was over-exposed so I attached a [variable ND-filter](https://amzn.com/B003RDF2MS/?tag=kevideld-20) to the lens and tuned it until I had an acceptable result. I finally customized the white balance to match the ambient light temperature.
    #    |                                                                                                                                                                                                                                                                                                                                                                                                                              ^^
    #    |
    " ND-filter",
    # error: `Shure` should be `Sure`
    #   --> ./content/2010/making-info-tgv-android-app-video.md:68:154
    #    |
    # 68 | Let's talk audio now. I personally want to thanks [Tomasito, Cool Cavemen's saxophonist](https://coolcavemen.com/biography/tomasito/), who lends me his [Shure Beta57A microphone](https://amzn.com/B0002BACAK/?tag=kevideld-20) and his [Line 6 POD Studio UX1](https://amzn.com/B001EKECAY/?tag=kevideld-20) interface for this project. With [electrical tape](https://en.wikipedia.org/wiki/Electrical_tape), I attached the microphone on my [Gorillapod](https://amzn.com/B002FGTWOC/?tag=kevideld-20), which serves as a mic stand. I used this setup to record Arnaud's voice:
    #    |                                                                                                                                                          ^^^^^
    #    |
    "Shure ",
    # error: `shure` should be `sure`
    #   --> ./content/2010/making-info-tgv-android-app-video.md:70:13
    #    |
    # 70 | ![]({attach}shure-beta-57a-microphone-on-gorillapod.jpg)
    #    |             ^^^^^
    #    |
    "shure-",
    # error: `hda` should be `had`
    #   --> ./content/2006/hardware-commands.md:25:28
    #    |
    # 25 | - Low-level format of the `hda` device:
    #    |                            ^^^
    #    |
    "`hda`",
    # error: `dbe` should be `be`
    #   --> ./content/2008/hp-w2207h-external-display-on-intel-945.md:37:9
    #    |
    # 37 |   Load "dbe" # Double-Buffering Extension
    #    |         ^^^
    #    |
    ' "dbe" ',
    # error: `abitrate` should be `arbitrate`
    #   --> ./content/2006/video-commands.md:297:140
    #     |
    # 297 |   $ mencoder source.avi -ovc lavc -oac lavc -ffourcc DX50 -lavcopts vcodec=mpeg4:vbitrate=400:v4mv:mbd=2:trell:autoaspect:dia=2:acodec=mp3:abitrate=32:vpass=1 -vf hqdn3d -o output.avi
    #     |                                                                                                                                            ^^^^^^^^
    #     |
    ":abitrate=",
] # Sections of text to ignore.
# Exclude French articles.
files.extend-exclude = [
    "content/2004/mise-en-place-paserelle-adsl-mandrake-10.md",
    "content/2005/creer-un-espace-de-stockage-fiable-avec-raid-5-et-lvm-sous-linux.md",
    "content/2005/script-de-reconnection-automatique-ppp.md",
    "content/2006/ajouter-une-entree-jack-universelle-sur-un-telephone-sagem-my700xi.md",
    "content/2009/cool-cavemen-creative-commons-moi.md",
    "content/2010/comment-supprimer-des-comptes-mails-secondaires-free-fr.md",
    "content/2012/ovh-configuration-modem-thomson-tg585-ipoe.md",
]
